# renderer

./: .gitignore  CMakeLists.txt  Makefile  cvarmanager.h  filesys.c  filesys.h  glfwmanager.c  glfwmanager.h  glmanager.c  glmanager.h  hashtables.h  idlist.h  mathlib.c  modelmanager.c  modelmanager.h  planebox.c  planebox.h  renderer.c  renderer.h  shadermanager.c  stringlib.c  stringlib.h  tmp.planebox  tracegrid.c  vbomanager.c  vbomanager.h  vertexattribs.h  viewportmanager.c  viewportmanager.h
models/: test.iqm
shaders/: debugmesh.frag  debugmesh.names  debugmesh.program  line.frag  test.program  test.vert
src/: bboxrenderer.c  bboxrenderer.h  contextmanager.c  contextmanager.h  cvarmanager.c  dllincludeme.h  entitymanager.c  entitymanager.h  filesys.c  firstbouncerenderer.c  firstbouncerenderer.h  fsquad.c  fsquad.h  gamecodeincludes.h  gamecodemanager.c  gamecodemanager.h  glfwmanager.c  glfwmanager.h  glmanager.c  glmanager.h  globaldefs.h  hashtables.c  headclient.c  headclient.h  mathlib.h  matrixlib.c  matrixlib.h  modelmanager.c  modelmanager.h  navdllincludeme.h  naviclient.c  naviclient.h  navincludes.h  navmanager.c  navmanager.h  planebox.c  planebox.h  renderer.c  renderqueue.c  renderqueue.h  (+13 more)
src/models/: arrow.iqm  grid.blend  grid.iqm  teapot.iqm  testwindshield.blend  testwindshield.iqm
src/planeboxes/: screen.planebox  tmp.planebox
src/proto/: accelerationForce.pb-c.c  accelerationForce.pb-c.h  accelerationForce.proto  location.pb-c.c  location.pb-c.h  location.proto  requestHeader.pb-c.c  requestHeader.pb-c.h  requestHeader.proto  response.pb-c.c  response.pb-c.h  response.proto  rotationRate.pb-c.c  rotationRate.pb-c.h  rotationRate.proto  step.pb-c.c  step.pb-c.h  (+1 more)
(+58 files in other folders)
